# stack-analyzer

./: .gitignore  CHANGES.md  LICENSE.txt  README.md  pyproject.toml
stack_analyzer/: callgraph_info.py  core.py  graph.py  util.py
stack_analyzer/callgraph_info/: edge.py  graph.py  node.py  util.py
tests/: test.py
tests/factorial/: factorial.c  factorial.ci
tests/htop/: AffinityPanel.ci  AvailableColumnsPanel.ci  BatteryMeter.ci  CRT.ci  CategoriesPanel.ci  ClockMeter.ci  ColorsPanel.ci  ColumnsPanel.ci  CommandLine.ci  CommandScreen.ci  Compat.ci  DateMeter.ci  DateTimeMeter.ci  DiskIOMeter.ci  DynamicColumn.ci  DynamicMeter.ci  EnvScreen.ci  FunctionBar.ci  Header.ci  HeaderOptionsPanel.ci  IncSet.ci  InfoScreen.ci  ListItem.ci  MainPanel.ci  MemoryMeter.ci  MemorySwapMeter.ci  Meter.ci  NetworkIOMeter.ci  Object.ci  OpenFilesScreen.ci  OptionItem.ci  Panel.ci  Process.ci  ProcessList.ci  RichString.ci  ScreenManager.ci  ScreensPanel.ci  SwapMeter.ci  SysArchMeter.ci  TasksMeter.ci  (+5 more)
tests/htop/generic/: gettime.ci  hostname.ci  uname.ci
tests/htop/htop/: Action.ci  Affinity.ci  AvailableMetersPanel.ci  CPUMeter.ci  DisplayOptionsPanel.ci  Hashtable.ci  HostnameMeter.ci  LoadAverageMeter.ci  MetersPanel.ci  ProcessLocksScreen.ci  Settings.ci  SignalsPanel.ci  UptimeMeter.ci  Vector.ci
tests/htop/htop/linux/: LinuxProcess.ci  (+1 more)
tests/htop/linux/: CGroupUtils.ci  HugePageMeter.ci  IOPriorityPanel.ci  LibSensors.ci  LinuxProcessList.ci  Platform.ci  PressureStallMeter.ci  SystemdMeter.ci  ZramMeter.ci
tests/htop/zfs/: ZfsArcMeter.ci  ZfsCompressedArcMeter.ci
