[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stack-analyzer"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "roey-e" },
]
classifiers = []
dependencies = [
  "networkx"
]
dynamic = ["version"]

[tool.hatch.version]
path = "stack_analyzer/__about__.py"
